--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "echo \"Error: no test specified\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
+  }, "homepage": "https://Hakim1010000.github.io/myrepo2156",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hakim1010000/myrepo2156.git"
